New data, and swapping countries around

--- a/final_template/template.xml.j2
+++ b/final_template/template.xml.j2
@@ -69,16 +69,16 @@
 <text top="1818" left="72" width="113" height="44" font="6"><a href="#malawi">Malawi</a></text>
 <button top="1908" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="mauritius"/>
 <text top="1908" left="72" width="141" height="44" font="6"><a href="#mauritius">Mauritius</a></text>
-<button top="1998" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="mayotte"/>
-<text top="1998" left="72" width="131" height="44" font="6"><a href="#mayotte">Mayotte</a></text>
-<button top="2088" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="mozambique"/>
-<text top="2088" left="72" width="211" height="44" font="6"><a href="#mozambique">Mozambique</a></text>
-<button top="2178" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="reunion"/>
-<text top="2178" left="72" width="129" height="44" font="6"><a href="#reunion">Réunion</a></text>
-<button top="2268" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="rwanda"/>
-<text top="2268" left="72" width="128" height="44" font="6"><a href="#rwanda">Rwanda</a></text>
-<button top="2358" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="somalia"/>
-<text top="2358" left="72" width="123" height="44" font="6"><a href="#somalia">Somalia</a></text>
+<button top="1998" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="mozambique"/>
+<text top="1998" left="72" width="211" height="44" font="6"><a href="#mozambique">Mozambique</a></text>
+<button top="2088" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="rwanda"/>
+<text top="2088" left="72" width="128" height="44" font="6"><a href="#rwanda">Rwanda</a></text>
+<button top="2178" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="seychelles"/>
+<text top="2178" left="72" width="129" height="44" font="6"><a href="#seychelles">Seychelles</a></text>
+<button top="2268" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="somalia"/>
+<text top="2268" left="72" width="123" height="44" font="6"><a href="#somalia">Somalia</a></text>
+<button top="2358" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="south-sudan"/>
+<text top="2358" left="72" width="131" height="44" font="6"><a href="#south-sudan">South Sudan</a></text>
 <button top="2448" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="sudan"/>
 <text top="2448" left="72" width="98" height="44" font="6"><a href="#sudan">Sudan</a></text>
 <button top="2538" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="uganda"/>
@@ -362,27 +362,27 @@
 <text top="360" left="72" width="40" height="44" font="6"><a href="#fiji">Fiji</a></text>
 <button top="450" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="french-polynesia"/>
 <text top="450" left="72" width="262" height="44" font="6"><a href="#french-polynesia">French Polynesia</a></text>
-<button top="540" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="guam"/>
-<text top="540" left="72" width="95" height="44" font="6"><a href="#guam">Guam</a></text>
+<button top="540" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="kiribati"/>
+<text top="540" left="72" width="95" height="44" font="6"><a href="#kiribati">Kiribati</a></text>
 <button top="630" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="micronesia"/>
 <text top="630" left="72" width="508" height="44" font="6"><a href="#micronesia">Micronesia (Federated States of)</a></text>
-<button top="720" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="new-caledonia"/>
-<text top="720" left="72" width="244" height="44" font="6"><a href="#new-caledonia">New Caledonia</a></text>
-<button top="810" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="new-zealand"/>
-<text top="810" left="72" width="211" height="44" font="6"><a href="#new-zealand">New Zealand</a></text>
-<button top="900" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="papua-new-guinea"/>
-<text top="900" left="72" width="302" height="44" font="6"><a href="#papua-new-guinea">Papua New Guinea</a></text>
-<button top="990" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="samoa"/>
-<text top="990" left="72" width="108" height="44" font="6"><a href="#samoa">Samoa</a></text>
-<button top="1080" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="solomon-islands"/>
-<text top="1080" left="72" width="258" height="44" font="6"><a href="#solomon-islands">Solomon Islands</a></text>
-<button top="1170" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="tonga"/>
-<text top="1170" left="72" width="98" height="44" font="6"><a href="#tonga">Tonga</a></text>
+<button top="720" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="new-zealand"/>
+<text top="720" left="72" width="211" height="44" font="6"><a href="#new-zealand">New Zealand</a></text>
+<button top="810" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="papua-new-guinea"/>
+<text top="810" left="72" width="302" height="44" font="6"><a href="#papua-new-guinea">Papua New Guinea</a></text>
+<button top="900" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="samoa"/>
+<text top="900" left="72" width="108" height="44" font="6"><a href="#samoa">Samoa</a></text>
+<button top="990" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="solomon-islands"/>
+<text top="990" left="72" width="258" height="44" font="6"><a href="#solomon-islands">Solomon Islands</a></text>
+<button top="1080" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="tonga"/>
+<text top="1080" left="72" width="98" height="44" font="6"><a href="#tonga">Tonga</a></text>
+<button top="1170" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="tuvalu"/>
+<text top="1170" left="72" width="244" height="44" font="6"><a href="#tuvalu">Tuvalu</a></text>
 <button top="1260" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="vanuatu"/>
 <text top="1260" left="72" width="128" height="44" font="6"><a href="#vanuatu">Vanuatu</a></text>
 </page>
 <page number="6" position="absolute" top="0" left="0" height="4284" width="1152">
-<image top="8" left="0" width="1152" height="4284" src="toc5.png"/>
+<image top="8" left="0" width="1152" height="4284" src="toc5_shift.png"/>
 <text top="0" left="0" width="231" height="96" font="4"><a name="Europe"></a></text>
 <button top="84" left="951" width="111" height="32" pl="45" pr="17" pt="7" pb="25" href="ALL"/>
 <text top="84" left="951" width="111" height="32" font="3"><a href="#ALL"><b>all regions</b></a></text>
@@ -406,37 +406,37 @@
 <text top="990" left="72" width="117" height="44" font="6"><a href="#greece">Greece</a></text>
 <button top="1080" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="hungary"/>
 <text top="1080" left="72" width="135" height="44" font="6"><a href="#hungary">Hungary</a></text>
-<button top="1170" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="latvia"/>
-<text top="1170" left="72" width="90" height="44" font="6"><a href="#latvia">Latvia</a></text>
-<button top="1260" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="lithuania"/>
-<text top="1260" left="72" width="138" height="44" font="6"><a href="#lithuania">Lithuania</a></text>
-<button top="1350" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="montenegro"/>
-<text top="1350" left="72" width="199" height="44" font="6"><a href="#montenegro">Montenegro</a></text>
-<button top="1440" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="poland"/>
-<text top="1440" left="72" width="108" height="44" font="6"><a href="#poland">Poland</a></text>
-<button top="1530" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="moldova"/>
-<text top="1530" left="72" width="330" height="44" font="6"><a href="#moldova">Republic of Moldova</a></text>
-<button top="1620" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="romania"/>
-<text top="1620" left="72" width="137" height="44" font="6"><a href="#romania">Romania</a></text>
-<button top="1710" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="russia"/>
-<text top="1710" left="72" width="293" height="44" font="6"><a href="#russia">Russian Federation</a></text>
-<button top="1800" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="serbia"/>
-<text top="1800" left="72" width="98" height="44" font="6"><a href="#serbia">Serbia</a></text>
-<button top="1890" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="slovakia"/>
-<text top="1890" left="72" width="128" height="44" font="6"><a href="#slovakia">Slovakia</a></text>
-<button top="1980" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="slovenia"/>
-<text top="1980" left="72" width="132" height="44" font="6"><a href="#slovenia">Slovenia</a></text>
-<button top="2070" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="macedonia"/>
-<text top="2070" left="72" width="699" height="44" font="6"><a href="#macedonia">The former Yugoslav Republic of Macedonia</a></text>
-<button top="2160" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="ukraine"/>
-<text top="2160" left="72" width="119" height="44" font="6"><a href="#ukraine">Ukraine</a></text>
-<text top="2309" left="72" width="347" height="64" font="5"><b>Western Europe</b></text>
-<button top="2412" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="austria"/>
-<text top="2412" left="72" width="106" height="44" font="6"><a href="#austria">Austria</a></text>
-<button top="2502" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="belgium"/>
-<text top="2502" left="72" width="128" height="44" font="6"><a href="#belgium">Belgium</a></text>
-<button top="2592" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="channel-islands"/>
-<text top="2592" left="72" width="245" height="44" font="6"><a href="#channel-islands">Channel Islands</a></text>
+<button top="1170" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="kosovo"/>
+<text top="1170" left="72" width="330" height="44" font="6"><a href="#kosovo">Kosovo</a></text>
+<button top="1260" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="latvia"/>
+<text top="1260" left="72" width="90" height="44" font="6"><a href="#latvia">Latvia</a></text>
+<button top="1350" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="lithuania"/>
+<text top="1350" left="72" width="138" height="44" font="6"><a href="#lithuania">Lithuania</a></text>
+<button top="1440" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="montenegro"/>
+<text top="1440" left="72" width="199" height="44" font="6"><a href="#montenegro">Montenegro</a></text>
+<button top="1530" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="poland"/>
+<text top="1530" left="72" width="108" height="44" font="6"><a href="#poland">Poland</a></text>
+<button top="1620" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="moldova"/>
+<text top="1620" left="72" width="330" height="44" font="6"><a href="#moldova">Republic of Moldova</a></text>
+<button top="1710" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="romania"/>
+<text top="1710" left="72" width="137" height="44" font="6"><a href="#romania">Romania</a></text>
+<button top="1800" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="russia"/>
+<text top="1800" left="72" width="293" height="44" font="6"><a href="#russia">Russian Federation</a></text>
+<button top="1890" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="serbia"/>
+<text top="1890" left="72" width="98" height="44" font="6"><a href="#serbia">Serbia</a></text>
+<button top="1980" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="slovakia"/>
+<text top="1980" left="72" width="128" height="44" font="6"><a href="#slovakia">Slovakia</a></text>
+<button top="2070" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="slovenia"/>
+<text top="2070" left="72" width="132" height="44" font="6"><a href="#slovenia">Slovenia</a></text>
+<button top="2160" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="macedonia"/>
+<text top="2160" left="72" width="699" height="44" font="6"><a href="#macedonia">The former Yugoslav Republic of Macedonia</a></text>
+<button top="2250" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="ukraine"/>
+<text top="2250" left="72" width="119" height="44" font="6"><a href="#ukraine">Ukraine</a></text>
+<text top="2399" left="72" width="347" height="64" font="5"><b>Western Europe</b></text>
+<button top="2502" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="austria"/>
+<text top="2502" left="72" width="106" height="44" font="6"><a href="#austria">Austria</a></text>
+<button top="2592" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="belgium"/>
+<text top="2592" left="72" width="128" height="44" font="6"><a href="#belgium">Belgium</a></text>
 <button top="2682" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="denmark"/>
 <text top="2682" left="72" width="141" height="44" font="6"><a href="#denmark">Denmark</a></text>
 <button top="2772" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="finland"/>
