Sentence names and first paragraph

--- a/final_template/template.xml.j2
+++ b/final_template/template.xml.j2
@@ -99,7 +99,7 @@
 <button top="3294" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="chad"/>
 <text top="3294" left="72" width="84" height="44" font="6"><a href="#chad">Chad</a></text>
 <button top="3384" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="congo"/>
-<text top="3384" left="72" width="109" height="44" font="6"><a href="#congo">Congo</a></text>
+<text top="3384" left="72" width="109" height="44" font="6"><a href="#congo">Republic of Congo</a></text>
 <button top="3474" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="drc"/>
 <text top="3474" left="72" width="548" height="44" font="6"><a href="#drc">Democratic Republic of the Congo</a></text>
 <button top="3564" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="equatorial-guinea"/>
@@ -515,28 +515,28 @@
 <text top="1053" left="72" width="990" height="44" font="8">being disaggregated by Income Quintile, Gender, Geography, </text>
 <text top="1107" left="72" width="298" height="44" font="8">Age and Disability. </text>
 <text top="1197" left="72" width="912" height="47" font="8">This profile provides key available data about the status </text>
-<text top="1251" left="72" width="514" height="47" font="8">of the P20 in {{ country.name }}.</text>
-<text top="1551" left="162" width="617" height="64" font="5"><b>the P20 in {{ country.name }}</b></text>
-<text top="1674" left="72" width="710" height="44" font="6">{{ country.P20pop|people }} people in {{ country.name }} are among </text>
+<text top="1251" left="72" width="514" height="47" font="8">of the P20 in {{ country.sentencename }}.</text>
+<text top="1551" left="162" width="617" height="64" font="5"><b>the P20 in {{ country.sentencename }}</b></text>
+<text top="1674" left="72" width="710" height="44" font="6">{{ country.P20pop|people }} people in {{ country.sentencename }} are among </text>
 <text top="1728" left="72" width="763" height="44" font="6">the poorest 20% of the world’s population – the </text>
-<text top="1782" left="72" width="730" height="44" font="6">global P20. That is [X]% of the total population </text>
+<text top="1782" left="72" width="730" height="44" font="6">global P20. That is {{ country.PercentinP20|percent }} of the total population </text>
 <text top="1836" left="72" width="600" height="44" font="6">and they live on less than $2.54 a day. </text>
 <text top="1926" left="72" width="729" height="44" font="6">The national P20 – the poorest 20% of people </text>
-<text top="1980" left="72" width="789" height="44" font="6">within {{ country.name }} – live on between $[XX] </text>
+<text top="1980" left="72" width="789" height="44" font="6">within {{ country.sentencename }} – live on between $[XX] </text>
 <text top="2034" left="72" width="786" height="44" font="6">and $[XX] a day compared with an average $[XX] </text>
 <text top="2088" left="72" width="460" height="44" font="6">for the rest of the population.</text>
 <text top="2187" left="72" width="600" height="35" font="9"><b>Source: </b>Development Initiatives based on PovcalNet</text>
 <text top="2190" left="622" width="5" height="20" font="11"><a href="#{{ country.slug }}1"><b>1</b></a></text>
 <text top="2451" left="162" width="160" height="64" font="5"><b>income</b></text>
 <text top="2574" left="72" width="765" height="44" font="6">In 2000 the gap between the P20 and everyone </text>
-<text top="2628" left="72" width="775" height="44" font="6">else in {{ country.name }} was $[0.00] and in 2013 </text>
+<text top="2628" left="72" width="775" height="44" font="6">else in {{ country.sentencename }} was $[0.00] and in 2013 </text>
 <text top="2682" left="72" width="213" height="44" font="6">it was $[0.00].</text>
 <text top="3699" left="72" width="600" height="35" font="9"><b>Source: </b>Development Initiatives based on PovcalNet</text>
 <text top="3819" left="162" width="188" height="64" font="5"><b>nutrition</b></text>
 <text top="3942" left="72" width="716" height="44" font="6">Nutrition is fundamental to the ability to learn </text>
 <text top="3996" left="72" width="790" height="44" font="6">and earn. Children who experience poor nutrition </text>
 <text top="4050" left="72" width="681" height="44" font="6">can suffer lifelong disadvantage as a result. </text>
-<text top="4140" left="72" width="707" height="44" font="6">In {{ country.name }}, [X]% of under five year </text>
+<text top="4140" left="72" width="707" height="44" font="6">In {{ country.sentencename }}, [X]% of under five year </text>
 <text top="4194" left="72" width="692" height="44" font="6">olds experienced stunting. In the P20 [XX]% </text>
 <text top="4248" left="72" width="696" height="44" font="6">experienced stunting compared with [XX]% </text>
 <text top="4302" left="72" width="448" height="44" font="6">of the rest of the population.</text>
@@ -549,10 +549,10 @@
 <text top="5526" left="72" width="687" height="44" font="6">are birth registered. If you are born into the </text>
 <text top="5580" left="72" width="752" height="44" font="6">poorest 20% of people you are much less likely </text>
 <text top="5634" left="72" width="466" height="44" font="6">to have your birth registered. </text>
-<text top="5724" left="72" width="734" height="44" font="6">In {{ country.name }} [XX]% of births in the P20 </text>
+<text top="5724" left="72" width="734" height="44" font="6">In {{ country.sentencename }} [XX]% of births in the P20 </text>
 <text top="5778" left="72" width="707" height="44" font="6">are registered compared [XX]% in the rest of </text>
 <text top="5832" left="72" width="239" height="44" font="6">the population.</text>
-<text top="6714" left="72" width="690" height="44" font="6">Birth registration rates in {{ country.name }}  </text>
+<text top="6714" left="72" width="690" height="44" font="6">Birth registration rates in {{ country.sentencename }}  </text>
 <text top="6768" left="72" width="451" height="44" font="6">have [increased/decreased].</text>
 <text top="6867" left="72" width="987" height="35" font="9"><b>Source: </b>Development Initiatives based on World Bank World Development Indicators: </text>
 <text top="6904" left="72" width="418" height="32" font="10">Completeness of birth registration %</text>
@@ -560,7 +560,7 @@
 <text top="7023" left="162" width="219" height="64" font="5"><b>education</b></text>
 <text top="7146" left="72" width="613" height="44" font="6">Education is fundamental to a person’s </text>
 <text top="7200" left="72" width="202" height="44" font="6">life chances. </text>
-<text top="7290" left="72" width="684" height="44" font="6">In {{ country.name }} [XX]% of people have </text>
+<text top="7290" left="72" width="684" height="44" font="6">In {{ country.sentencename }} [XX]% of people have </text>
 <text top="7344" left="72" width="640" height="44" font="6">completed secondary school education.</text>
 <text top="8118" left="72" width="698" height="44" font="6">[XX]% of people in the P20 have completed </text>
 <text top="8172" left="72" width="723" height="44" font="6">a secondary education compared with [XX]% </text>
@@ -571,7 +571,7 @@
 <text top="9360" left="72" width="801" height="44" font="6">in poverty. If you are among the P20 you are more </text>
 <text top="9414" left="72" width="721" height="44" font="6">likely to suffer from preventable diseases and </text>
 <text top="9468" left="72" width="214" height="44" font="6">to die earlier. </text>
-<text top="9558" left="72" width="790" height="44" font="6">In {{ country.name }} the Under Five Mortality rate </text>
+<text top="9558" left="72" width="790" height="44" font="6">In {{ country.sentencename }} the Under Five Mortality rate </text>
 <text top="9612" left="72" width="425" height="44" font="6">is [XX] per 1,000 live births. </text>
 <text top="9702" left="72" width="702" height="44" font="6">The under five mortality rate among the P20 </text>
 <text top="9756" left="72" width="742" height="44" font="6">is [XX] per 1,000 live births compared with [XX] </text>
@@ -620,30 +620,30 @@
 <text top="1053" left="72" width="990" height="44" font="8">being disaggregated by Income Quintile, Gender, Geography, </text>
 <text top="1107" left="72" width="288" height="44" font="8">Age and Disability.</text>
 <text top="1197" left="72" width="912" height="47" font="8">This profile provides key available data about the status </text>
-<text top="1251" left="72" width="514" height="47" font="8">of the P20 in {{ country.name }}.</text>
-<text top="1551" left="162" width="617" height="64" font="5"><b>the P20 in {{ country.name }}</b></text>
-<text top="1674" left="72" width="710" height="44" font="6">[XX] people in {{ country.name }} are among </text>
+<text top="1251" left="72" width="514" height="47" font="8">of the P20 in {{ country.sentencename }}.</text>
+<text top="1551" left="162" width="617" height="64" font="5"><b>the P20 in {{ country.sentencename }}</b></text>
+<text top="1674" left="72" width="710" height="44" font="6">{{ country.P20pop|people }} people in {{ country.sentencename }} are among </text>
 <text top="1728" left="72" width="763" height="44" font="6">the poorest 20% of the world’s population – the </text>
-<text top="1782" left="72" width="730" height="44" font="6">global P20. That is [X]% of the total population </text>
+<text top="1782" left="72" width="730" height="44" font="6">global P20. That is {{ country.PercentinP20|percent }} of the total population </text>
 <text top="1836" left="72" width="591" height="44" font="6">and they live on less than $2.54 a day.</text>
 <text top="1926" left="72" width="729" height="44" font="6">The national P20 – the poorest 20% of people </text>
-<text top="1980" left="72" width="789" height="44" font="6">within {{ country.name }} – live on between $[XX] </text>
+<text top="1980" left="72" width="789" height="44" font="6">within {{ country.sentencename }} – live on between $[XX] </text>
 <text top="2034" left="72" width="786" height="44" font="6">and $[XX] a day compared with an average $[XX] </text>
 <text top="2088" left="72" width="460" height="44" font="6">for the rest of the population.</text>
 <text top="2187" left="72" width="600" height="35" font="9"><b>Source: </b>Development Initiatives based on PovcalNet</text>
 <text top="2190" left="622" width="5" height="20" font="11"><a href="#{{ country.slug }}1"><b>1</b></a></text>
 <text top="2451" left="162" width="160" height="64" font="5"><b>income</b></text>
 <text top="2574" left="72" width="765" height="44" font="6">In 2000 the gap between the P20 and everyone </text>
-<text top="2628" left="72" width="775" height="44" font="6">else in {{ country.name }} was $[0.00] and in 2013 </text>
+<text top="2628" left="72" width="775" height="44" font="6">else in {{ country.sentencename }} was $[0.00] and in 2013 </text>
 <text top="2682" left="72" width="213" height="44" font="6">it was $[0.00].</text>
 <text top="3699" left="72" width="600" height="35" font="9"><b>Source: </b>Development Initiatives based on PovcalNet</text>
 <text top="3819" left="162" width="188" height="64" font="5"><b>nutrition</b></text>
-<text top="3942" left="72" width="743" height="44" font="6">In {{ country.name }} [XX]% of adults are obese.</text>
+<text top="3942" left="72" width="743" height="44" font="6">In {{ country.sentencename }} [XX]% of adults are obese.</text>
 <text top="4779" left="72" width="882" height="35" font="9"><b>Source: </b>Development Initiatives based on NCD Risk Factor Collaboration 2017</text>
 <text top="4899" left="162" width="219" height="64" font="5"><b>education</b></text>
 <text top="5022" left="72" width="613" height="44" font="6">Education is fundamental to a person’s </text>
 <text top="5076" left="72" width="193" height="44" font="6">life chances.</text>
-<text top="5166" left="72" width="684" height="44" font="6">In {{ country.name }} [XX]% of people have </text>
+<text top="5166" left="72" width="684" height="44" font="6">In {{ country.sentencename }} [XX]% of people have </text>
 <text top="5220" left="72" width="640" height="44" font="6">completed secondary school education.</text>
 <text top="5985" left="72" width="879" height="35" font="9"><b>Source: </b>Development Initiatives based on UNESCO Institute for Statistics 2018</text>
 <text top="6066" left="72" width="801" height="44" font="6">Data is not available that allows us to disaggregate </text>
@@ -656,7 +656,7 @@
 <text top="6588" left="72" width="801" height="44" font="6">in poverty. If you are among the P20 you are more </text>
 <text top="6642" left="72" width="721" height="44" font="6">likely to suffer from preventable diseases and </text>
 <text top="6696" left="72" width="205" height="44" font="6">to die earlier.</text>
-<text top="6786" left="72" width="709" height="44" font="6">In {{ country.name }} the under five mortality </text>
+<text top="6786" left="72" width="709" height="44" font="6">In {{ country.sentencename }} the under five mortality </text>
 <text top="6840" left="72" width="486" height="44" font="6">rate is [XX] per 1,000 live births.</text>
 <text top="6930" left="72" width="801" height="44" font="6">Data is not available that allows us to disaggregate </text>
 <text top="6984" left="72" width="672" height="44" font="6">under five mortality based on income and </text>
